--- a/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
+++ b/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
@@ -8,13 +8,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.android.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.android.MainActivity"
+            android:label="@string/title_activity_main" >
+        </activity>
+        <activity
+            android:name=".ui.android.ResetActivity"
+            android:label="@string/title_activity_reset" >
         </activity>
     </application>
 
