--- a/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
+++ b/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".ui.android.ResetActivity"
             android:label="@string/reset" >
         </activity>
+        <activity
+            android:name=".ui.android.EditActivity"
+            android:label="@string/title_activity_edit_actibity" >
+        </activity>
     </application>
 
 </manifest>
