--- a/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
+++ b/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="wzhkun.securepw" >
+    package="wzhkun.securepw">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.android.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,16 +18,13 @@
         </activity>
         <activity
             android:name=".ui.android.MainActivity"
-            android:label="@string/title_activity_main" >
-        </activity>
+            android:label="@string/title_activity_main"></activity>
         <activity
             android:name=".ui.android.ResetActivity"
-            android:label="@string/reset" >
-        </activity>
+            android:label="@string/reset"></activity>
         <activity
             android:name=".ui.android.EditActivity"
-            android:label="@string/title_activity_edit_actibity" >
-        </activity>
+            android:label="@string/title_activity_edit_actibity"></activity>
     </application>
 
 </manifest>
