--- a/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
+++ b/SecurePasswordAndroid/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".ui.android.ChangePasswordActivity"
             android:label="@string/title_activity_change_password" >
         </activity>
+        <activity
+            android:name=".ui.android.SyncActivity"
+            android:label="@string/title_activity_sync" >
+        </activity>
     </application>
 
 </manifest>
